--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p id="textArea"></p>
-    <p id="weaponChoice1"></p>
-    <p id="weaponChoice2"></p>
-    <p id="weaponChoice3"></p>
-    <p id="weaponChoice4"></p>    
+    <p id="fightInfo"></p>
+    <p id="fightStatus"></p>
+    <p id="fightOptions"></p>    
+    <p id="fightDamage"></p>
     <label for="userInput">></label>
     <input id="userInput">
+    <input id="fightInput">  
 
     <script src="index.js"></script>
 </body>
